test/parse/strict/bad/manyvlinesections.sol
comment
s SATISFIABLE
comment
v 1 0
comment
v 2 0
comment
v 1 0
comment
v 3 0
comment
